@startuml AddCommandArchitectureDiagram
package "seedu.command" {
    class AddCommand {
        +execute(args: String[])
        +handleAddMultipleFields(fieldData: String)
        +handleAddRecord(recordData: String)
        +handleUpdateFields(fieldData: String)
    }
}

package "seedu.model" {
    class Inventory
}

package "seedu.storage" {
    class Csv
}

package "seedu.ui" {
    class Ui
}

AddCommand --> Inventory : modifies
AddCommand --> Csv : updates
AddCommand --> Ui : displays
@enduml
